--- a/package.json
+++ b/package.json
@@ -4,16 +4,22 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 3000",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.3",
+    "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "crypto": "^1.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
-    "react-fast-marquee": "^1.3.5"
+    "react-fast-marquee": "^1.3.5",
+    "react-redux": "^8.0.5",
+    "react-use-websocket": "^4.3.1",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
