--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ibnlanre/cipher": "^2.0.1",
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
